--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="preload" as="image" href="logo.png">
-	<title>$LAGA - Lady Maga</title>
+	<title>$BROTHA - Mr America</title>
 	<meta name='robots' content='max-image-preview:large' />
 	<link rel="alternate" type="application/rss+xml" title="Meme Season &raquo; Feed"
 		href="logo.png" />
@@ -730,10 +730,10 @@
 												<a href="">DexScreener</a></li>
 											<li id="menu-item-14"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14 nav-item elementskit-mobile-builder-content">
-												<a href="https://x.com/lagaonsolana" target="_blank">Twitter</a></li>
+												<a href="https://x.com/mramericasol" target="_blank">Twitter</a></li>
 											<li id="menu-item-910"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-910 nav-item elementskit-mobile-builder-content">
-												<a href="https://t.me/lagaonsol" target="_blank">Telegram</a></li>
+												<a href="https://t.me/brothasolana" target="_blank">Telegram</a></li>
 										</ul>
 										<div class="elementskit-nav-identity-panel">
 											<div class="elementskit-site-title">
@@ -810,9 +810,8 @@
 									}
 								</style>
 								<h2 class="elementor-heading-title elementor-size-default">
-									<span class="elementor1">$LAGA</span>
-									<span class="elementor2" style="display: inline-block;vertical-align: middle;">Lady
-										Maga 
+									<span class="elementor1">$BROTHA</span>
+									<span class="elementor2" style="display: inline-block;vertical-align: middle;">MR AMERICA
 								</h2>
 							</div>
 							<div class="elementor-element elementor-element-9758440 elementor-widget elementor-widget-eael-creative-button animated fadeInRight"
@@ -830,7 +829,7 @@
 											<div class="creative-button-inner">
 
 												<span class="eael-creative-button-icon-left"></span>
-												<span class="cretive-button-text">Buy $LAGA</span>
+												<span class="cretive-button-text">Buy $BROTHA</span>
 
 											</div>
 										</a>
@@ -838,7 +837,7 @@
 										&nbsp;&nbsp;
 
 										<a target="_blank" class="eael-creative-button eael-creative-button--moema"
-											href="https://t.me/lagaonsol" data-text="Go!">
+											href="https://t.me/brothasolana" data-text="Go!">
 
 
 											<div class="creative-button-inner">
@@ -998,7 +997,7 @@
 												Contract </span>
 										</h2>
 										<p class="elementor-icon-box-description">
-											9BBgYvTLA4LeVjaRgyDdDATe5Hw4GuY9HfgCrsaq5a5a </p>
+											CA </p>
 									</div>
 								</div>
 							</div>
@@ -1014,7 +1013,7 @@
 							data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}"
 							data-widget_type="heading.default">
 							<div class="elementor-widget-container">
-								<h2 class="elementor-heading-title elementor-size-default">Get $LAGA</h2>
+								<h2 class="elementor-heading-title elementor-size-default">Get $BROTHA</h2>
 							</div>
 						</div>
 						<div class="elementor-element elementor-element-e84c36a elementor-invisible elementor-widget elementor-widget-text-editor"
@@ -1033,14 +1032,14 @@
 
 									<a target="_blank" class="eael-creative-button eael-creative-button--moema"
 										style="background-color: #44c0e3;"
-										href="https://dexscreener.com/solana/9BBgYvTLA4LeVjaRgyDdDATe5Hw4GuY9HfgCrsaq5a5a"
+										href="https://dexscreener.com/solana/CA"
 										data-text="Go!">
 
 
 										<div class="creative-button-inner">
 
 											<span class="eael-creative-button-icon-left"></span>
-											<span class="cretive-button-text">Buy $LAGA</span>
+											<span class="cretive-button-text">Buy $BROTHA</span>
 
 										</div>
 									</a>
@@ -1150,7 +1149,7 @@
 							data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}"
 							data-widget_type="heading.default">
 							<div class="elementor-widget-container">
-								<h2 class="elementor-heading-title elementor-size-default">Get $LAGA</h2>
+								<h2 class="elementor-heading-title elementor-size-default">Get $BROTHA</h2>
 							</div>
 						</div>
 						<div class="elementor-element elementor-element-6be70ab elementor-widget elementor-widget-text-editor"
@@ -1173,7 +1172,7 @@
 										<div class="creative-button-inner">
 
 											<span class="eael-creative-button-icon-left"></span>
-											<span class="cretive-button-text">Buy $LAGA</span>
+											<span class="cretive-button-text">Buy $BROTHA</span>
 
 										</div>
 									</a>
@@ -1198,7 +1197,7 @@
 												Contract </span>
 										</h2>
 										<p class="elementor-icon-box-description">
-											9BBgYvTLA4LeVjaRgyDdDATe5Hw4GuY9HfgCrsaq5a5a
+											CA
 										 </p>
 									</div>
 								</div>
@@ -1268,17 +1267,17 @@
 											<div
 												class="mdp-crawler-elementor-ticker-content mdp-crawler-elementor-ticker-animation-reverse ">
 												<div class="mdp-crawler-elementor-ticker-item">
-													<a href="#">$LAGA</a>
+													<a href="#">$BROTHA</a>
 												</div>
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
 												<div class="mdp-crawler-elementor-ticker-item">
-													<a href="#">LADY MAGA</a>
+													<a href="#">MR AMERICA</a>
 												</div>
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
 												<div class="mdp-crawler-elementor-ticker-item">
-													<a href="#">$LAGA</a>
+													<a href="#">$BROTHA</a>
 												</div>
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
@@ -1288,17 +1287,17 @@
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
 												<div class="mdp-crawler-elementor-ticker-item">
-													<a href="#">$LAGA</a>
+													<a href="#">$BROTHA</a>
 												</div>
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
 												<div class="mdp-crawler-elementor-ticker-item">
-													<a href="#">LADY MAGA</a>
+													<a href="#">MR AMERICA</a>
 												</div>
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
 												<div class="mdp-crawler-elementor-ticker-item">
-													<a href="#">$LAGA</a>
+													<a href="#">$BROTHA</a>
 												</div>
 												<span class="mdp-crawler-elementor-ticker-item-separator">
 													<i aria-hidden="true" class="fas fa-star-of-life"></i> </span>
@@ -1342,11 +1341,11 @@
 						<div class="elementor-element elementor-element-0424552 elementor-widget elementor-widget-text-editor"
 							data-id="0424552" data-element_type="widget" data-widget_type="text-editor.default">
 							<div class="elementor-widget-container">
-								<p>Please be advised that LAGA on SOL is a cryptocurrency created for entertainment
-									purposes and is not affiliated with or endorsed by Lady Gaga. While LAGA
-									Memecoin may mention or embody elements related Lady Gaga and Trump’s persona, image, or likeness,
-									it does not imply any direct endorsement, partnership, or approval by Trump and Lady Gaga. Any
-									resemblance or association between LAGA and Donald J. Trump is purely
+								<p>Please be advised that BROTHA on SOL is a cryptocurrency created for entertainment
+									purposes and is not affiliated with any entity. While BROTHA
+									Memecoin may mention or embody elements related well known individual's persona, image, or likeness,
+									it does not imply any direct endorsement, partnership, or approval by them. Any
+									resemblance or association between BROTHA and them is purely
 									coincidental and intended for satirical or humorous purposes</p>
 							</div>
 						</div>
@@ -1673,14 +1672,14 @@
 								<div class="elementor-social-icons-wrapper elementor-grid">
 									<span class="elementor-grid-item">
 										<a class="elementor-icon elementor-social-icon elementor-social-icon-telegram-plane elementor-animation-push elementor-repeater-item-1ca55ab"
-											href="https://t.me/lagaonsol" target="_blank">
+											href="https://t.me/brothasolana" target="_blank">
 											<span class="elementor-screen-only">Telegram-plane</span>
 											<i class="fab fa-telegram-plane"></i> </a>
 									</span>
 									<span class="elementor-grid-item">
 										<a target="_blank"
 											class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-animation-push elementor-repeater-item-2718ad2"
-											href="https://x.com/lagaonsolana" target="_blank">
+											href="https://x.com/mramericasol" target="_blank">
 											<span class="elementor-screen-only">Twitter</span>
 											<i class="fab fa-twitter"></i> </a>
 									</span>
@@ -1733,7 +1732,7 @@
 							data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}"
 							data-widget_type="heading.default">
 							<div class="elementor-widget-container">
-								<h2 class="elementor-heading-title elementor-size-default">© 2024 Lady Maga - $LAGA.
+								<h2 class="elementor-heading-title elementor-size-default">© 2024 MR AMERICA - $BROTHA.
 									All Rights Reserved.
 
 								</h2>
