--- a/index.html
+++ b/index.html
@@ -900,7 +900,7 @@
 											data-widget_type="heading.default">
 											<div class="elementor-widget-container">
 												<h2 class="elementor-heading-title elementor-size-default">Welcome to
-													Lady Maga</h2>
+													Brotha</h2>
 											</div>
 										</div>
 										<div class="elementor-element elementor-element-898bfbc elementor-invisible elementor-widget elementor-widget-text-editor"
@@ -950,9 +950,7 @@
 						<div class="elementor-element elementor-element-0424552 elementor-widget elementor-widget-text-editor"
 							data-id="0424552" data-element_type="widget" data-widget_type="text-editor.default">
 							<div class="elementor-widget-container">
-								<p>tis is not lady gaga. it is za rise of lady maga; a nevr ending pop legacy on da solami chain. whether
-									u r the biggest degen or da fatest whale or u hv a bad romance, u r welcum as long as u r not a jeeter
-								buy a piece of this histori and join us on d journy to make amirika gret again, wit lady maga </p>
+								<p>Letting freedom in the ring was a big mistake BROTHA</p>
 							</div>
 						</div>
 
