--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
 												<a href="">BUY</a></li>
 											<li id="menu-item-12"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-12 nav-item elementskit-mobile-builder-content">
-												<a href="">DexScreener</a></li>
+												<a href="https://dexscreener.com/solana/CA">DexScreener</a></li>
 											<li id="menu-item-14"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14 nav-item elementskit-mobile-builder-content">
 												<a href="https://x.com/mramericasol" target="_blank">Twitter</a></li>
