--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
 									<div class="eael-creative-button-wrapper">
 
 										<a target="_blank" class="eael-creative-button eael-creative-button--moema"
-											href="https://dexscreener.com/solana/CA"
+											href="https://www.pump.fun/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump"
 											data-text="Go!">
 
 
@@ -995,7 +995,7 @@
 												Contract </span>
 										</h2>
 										<p class="elementor-icon-box-description">
-											CA </p>
+											BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump </p>
 									</div>
 								</div>
 							</div>
@@ -1030,7 +1030,7 @@
 
 									<a target="_blank" class="eael-creative-button eael-creative-button--moema"
 										style="background-color: #44c0e3;"
-										href="https://dexscreener.com/solana/CA"
+										href="https://dexscreener.com/solana/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump"
 										data-text="Go!">
 
 
@@ -1163,7 +1163,7 @@
 								<div class="eael-creative-button-wrapper">
 
 									<a class="eael-creative-button eael-creative-button--moema"
-										href="https://www.pinksale.finance/launchpad/0x1d053f05250171f2b8eca1b719bd23c6e6de7bf1?chain=BSC"
+										href=""
 										data-text="Go!">
 
 
