--- a/index.html
+++ b/index.html
@@ -724,10 +724,10 @@
 											class="elementskit-navbar-nav elementskit-menu-po-center submenu-click-on-icon">
 											<li id="menu-item-11"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-11 nav-item elementskit-mobile-builder-content">
-												<a href="">BUY</a></li>
+												<a href="https://www.pump.fun/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump">BUY</a></li>
 											<li id="menu-item-12"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-12 nav-item elementskit-mobile-builder-content">
-												<a href="https://dexscreener.com/solana/CA">DexScreener</a></li>
+												<a href="https://dexscreener.com/solana/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump">DexScreener</a></li>
 											<li id="menu-item-14"
 												class="menu-item menu-item-type-custom menu-item-object-custom menu-item-14 nav-item elementskit-mobile-builder-content">
 												<a href="https://x.com/mramericasol" target="_blank">Twitter</a></li>
@@ -1030,7 +1030,7 @@
 
 									<a target="_blank" class="eael-creative-button eael-creative-button--moema"
 										style="background-color: #44c0e3;"
-										href="https://dexscreener.com/solana/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump"
+										href="https://www.pump.fun/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump"
 										data-text="Go!">
 
 
@@ -1163,7 +1163,7 @@
 								<div class="eael-creative-button-wrapper">
 
 									<a class="eael-creative-button eael-creative-button--moema"
-										href=""
+										href="https://www.pump.fun/BSZf2d5U6ZGwXg2vQE34Dpg49aD4aUa44S7ymsQypump"
 										data-text="Go!">
 
 
